# newsExtraction

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  readme.md
.github/workflows/: dev.yml
CAS/: apps.py  models.py  serializer.py
CAS/migrations/: 0002_rename_casdocument_cas_summary_document_and_more.py  0004_remove_cas_document_password.py
CAS/templates/cas/: upload.html
CAS/utils/: paytm.py  scrapper.py
cas/: admin.py  models.py  urls.py  views.py
cas/migrations/: 0001_initial.py  0003_cas_summary_current_value.py  0005_alter_cas_document_name.py
cas/utils/: cams.py  paytm.py  scrapper.py
newsExtraction/: apps.py  models.py
newsExtraction/migrations/: 0002_alter_news_scheduled.py
newsExtraction/scripts/: extractNews.py
news_extraction/: admin.py  apps.py
news_extraction/migrations/: 0001_initial.py
webscrap/: asgi.py  settings.py  urls.py  wsgi.py
webscrap/settings/: __init__.py  dev.py
