[tool.poetry]
name = "news"
version = "0.1.1"
description = "scrapping related projects"
authors = ["vaaghu <vaaghu@vittae.money>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
django = "^5.0.1"
django-extensions = "^3.2.3"
python-dateutil = "^2.8.2"
postgres = "^4.0"
pgvector = "^0.2.5"
djangorestframework = "^3.14.0"
pygments = "^2.17.2"
pandas = "^2.2.1"
pdfplumber = "^0.10.4"
tabula-py = "^2.9.0"
jpype1 = "^1.5.0"


[tool.poetry.group.server]
optional = true

[tool.poetry.group.server.dependencies]
uwsgi = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"